small fix to homepage font size and footer spacing in larger screensize

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -133,3 +133,10 @@
     margin-top: 0.4rem;
   }
 }
+
+@media screen and (min-width: 1300px) {
+  .container {
+    width: auto;
+    height: calc(100vh - 9.6rem);
+  }
+}
