--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -117,3 +117,9 @@
     font-size: 4.4rem;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .hello-1 {
+    font-size: 3rem;
+  }
+}
